# flint-core

./: .readthedocs.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yml
api/catalog/: index.html
api/io/: index.html
catalog/: index.html
docs/: catalog.md  engines-platforms.md  getting-started.md  index.md  io-guide.md
engines-platforms/: index.html
flint_core/: __init__.py  cli.py
flint_core/core/: exceptions.py  initializer.py  io.py  pipeline.py
flint_core/core/catalog/: engine.py  models.py
flint_core/pandas_core/: engine.py
flint_core/spark_core/: engine.py
getting-started/: index.html
io-guide/: index.html
search/: search_index.json
tests/core_tests/: test_hybrid_connectivity.py  test_initializer.py  test_io.py  test_lakehouse.py  test_multi_environment.py  test_pipeline.py
