[project]
name = "flint-core"
version = "0.2.0"
description = "A minimalist, agnostic Python framework to standardize data engineering pipelines."
authors = [
    {name = "idperez720", email = "ivandavidperez4@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"

dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "click (>=8.4.1,<9.0.0)"
]

[project.optional-dependencies]
pandas = [
    "pandas (>=3.0.3,<4.0.0)"
]
spark = [
    "pyspark (>=4.1.2,<5.0.0)"
]
aws = [
    "s3fs (>=2024.10.0)"
]
gcp = [
    "gcsfs (>=2024.10.0)"
]
azure = [
    "adlfs (>=2024.10.0)"
]
all = [
    "pandas (>=3.0.3,<4.0.0)",
    "pyspark (>=4.1.2,<5.0.0)",
    "s3fs (>=2024.10.0)",
    "gcsfs (>=2024.10.0)",
    "adlfs (>=2024.10.0)"
]

[tool.poetry]
packages = [{ include = "flint_core" }]
repository = "https://github.com/idperez720/flint-core"
keywords = ["data-engineering", "pyspark", "pandas", "data-catalog"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
flint = "flint_core.cli:entry_point"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.18"
black = "^26.5.1"
pylint = "^4.0.6"
pytest = "^9.1.1"
types-pyyaml = "^6.0.12.20260518"
jupyter = "^1.1.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings = {extras = ["python"], version = "^1.0.4"}
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["migrations", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
known-first-party = ["flint_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "no-member",
    "unused-argument",
    "fixme",
    "broad-exception-caught",
    "unnecessary-pass",
    "too-few-public-methods",
    "line-too-long",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "duplicate-code",
    "unnecessary-ellipsis",
    "protected-access",
    "import-outside-toplevel"
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as critical smoke tests",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.semantic_release]
version_variable = "flint_core/__init__.py:__version__"
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"